# murmur

./: .dockerignore  Cargo.toml  Containerfile  README.md  justfile  murmur.bat  run.sh
.github/workflows/: build.yml  container.yml
examples/: test_summarize.rs
src/: audio.rs  auth.rs  diarize.rs  export.rs  job.rs  llama_server.rs  main.rs  model_download.rs  models.rs  summarize.rs  transcribe.rs  worker.rs
src/routes/: audio.rs  config.rs  diarize.rs  export.rs  mod.rs  progress.rs  status.rs  summarize.rs  transcribe.rs  upload.rs
static/: index.html
test/: full.txt
